--- a/_posts/2024-08-11-6rs.md
+++ b/_posts/2024-08-11-6rs.md
@@ -20,6 +20,8 @@ A modernização de aplicações na nuvem é crucial para organizações que des
 
 Rearquitetar consiste em uma reestruturação significativa da arquitetura da aplicação, visando otimizar seu desempenho e funcionalidade no ambiente de nuvem. Esse processo pode envolver a adoção de paradigmas modernos, como microsserviços, computação serverless e arquiteturas orientadas a eventos. Essas abordagens melhoram a escalabilidade granular e aumentam a resiliência da aplicação, permitindo que ela responda de forma eficiente a flutuações de demanda e falhas.
 
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/6rs/Rearchitect.webp)
+
 **Quando usar Rearquitetar:**
 
 - Quando a aplicação precisa ser altamente escalável e resiliente para atender a demandas variáveis.
@@ -29,10 +31,24 @@ Rearquitetar consiste em uma reestruturação significativa da arquitetura da ap
 
 Reconstruir é a abordagem ideal quando a aplicação atual não pode ser adaptada para atender às necessidades futuras ou novas demandas de negócios. Ao reconstruir a aplicação do zero utilizando tecnologias nativas da nuvem, é possível introduzir novas funcionalidades, melhorar a escalabilidade e flexibilidade, e alinhar a aplicação com as melhores práticas de desenvolvimento moderno. Essa abordagem facilita a criação de soluções compatíveis com as capacidades avançadas da nuvem, como inteligência artificial (IA), machine learning e análises em tempo real.
 
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/6rs/Rebuild.webp)
+
 **Quando usar Reconstruir:**
 
 - Quando a aplicação não consegue acompanhar as exigências tecnológicas atuais ou futuras.
 - Quando se deseja aproveitar ao máximo as capacidades avançadas da nuvem, como IA e machine learning.
+
+**Replace (Substituir):**
+
+A abordagem **Replace** consiste em substituir uma aplicação existente por uma solução de **Software as a Service (SaaS)** ou outra solução comercial pronta. Essa estratégia permite à empresa evitar os custos e o tempo envolvidos na modificação ou manutenção de uma aplicação legada, optando por uma solução que já atende de forma mais eficiente às necessidades do negócio. Ao adotar uma solução SaaS, a organização também se beneficia de atualizações contínuas, suporte especializado e a possibilidade de escalabilidade sem a complexidade de gerenciar a infraestrutura subjacente.
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/6rs/Replace.webp)
+
+**Quando usar Replace:**
+
+- Quando há uma solução SaaS disponível que oferece funcionalidades mais modernas, alinhadas às necessidades do negócio e que pode ser implementada rapidamente.
+- Quando o custo de manutenção, atualização ou modernização de uma aplicação existente supera os benefícios, tornando a substituição por uma solução pronta uma opção mais econômica e estratégica.
+
 
 #### Inovação Relacionada à Adoção da Nuvem
 
@@ -61,6 +77,8 @@ A migração para a nuvem é a maneira mais rápida de levar aplicações ao Azu
 #### Rehost:
 
 O Rehost envolve mover aplicações para a nuvem sem modificar o código ou a arquitetura existente. Essa abordagem é ideal para empresas que desejam desativar rapidamente datacenters locais ou que precisam migrar urgentemente, mas cujas aplicações já atendem aos requisitos de negócios e não necessitam de mudanças significativas no curto prazo.
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/6rs/Rehost.webp)
 
 **Quando Usar Migrate:**
 
