--- a/_posts/2024-08-11-6rs.md
+++ b/_posts/2024-08-11-6rs.md
@@ -57,11 +57,11 @@ Para saber mais sobre o CAF, [confira esse artigo](https://rafaelmaferreira.com.
 
 **Implementação de Inovação com MVPs**
 
-Uma abordagem eficaz é começar com um Produto Mínimo Viável (MVP), que é uma versão preliminar de um novo recurso ou aplicação. O MVP oferece funcionalidade suficiente para coletar feedback dos usuários e validar a possibilidade da inovação. Esse processo de construir, medir e aprender permite ajustes rápidos para atender melhor às necessidades dos clientes.
+Uma abordagem eficaz é começar com um Produto Mínimo Viável (MVP), que é uma versão inicial de um novo recurso ou aplicação. O MVP oferece funcionalidade suficiente para coletar feedback dos usuários e validar a possibilidade da inovação. Esse processo de construir, medir e aprender permite ajustes rápidos para atender melhor às necessidades dos clientes.
 
 ### 2. Migrate
 
-A migração para a nuvem é a maneira mais rápida de levar aplicações ao Azure, permitindo que as organizações operem na nuvem com o mínimo de alterações. Essa abordagem é especialmente vantajosa para empresas que buscam agilidade na transição, aproveitando rapidamente os benefícios da escalabilidade, flexibilidade e redução de custos operacionais. A principal estratégia dentro da categoria **Migrate** é o **Rehost**, também conhecido como "vai do jeito que dá", traduzido do lift-and-shift.
+A migração para a nuvem é a maneira mais rápida de levar aplicações ao Azure, permitindo que as organizações operem na nuvem da mesma forma que estava no onpremise. Essa abordagem é especialmente vantajosa para empresas que buscam agilidade na transição, aproveitando rapidamente os benefícios da escalabilidade, flexibilidade e redução de custos operacionais, o famoso OPEX . A principal estratégia dentro da categoria **Migrate** é o **Rehost**, também conhecido como "vai do jeito que dá", traduzido do lift-and-shift.
 
 #### Rehost:
 
