--- a/_posts/2024-08-11-6rs.md
+++ b/_posts/2024-08-11-6rs.md
@@ -133,8 +133,8 @@ A modernização é estruturada em duas fases principais:
 **Benefícios de Retirar Aplicações:**
 
 - **Simplificação da Infraestrutura:** Reduz a complexidade operacional e os custos associados.
-- **Redirecionamento de Recursos:** Permite que os recursos de TI sejam focados em iniciativas que impulsionam a inovação e o crescimento.
-- **Redução de Riscos:** Aposentar aplicações legadas ajuda a mitigar riscos como vulnerabilidades de segurança e falhas de compatibilidade.
+- **Otimização Financeira (FinOps):** Otimiza a utilização e o custo dos recursos na nuvem.
+- **Sustentabilidade (GreenOps):** Reduz o consumo de energia e promove práticas de TI mais verdes.
 
 ## Conclusão
 
