--- a/_posts/2024-08-11-6rs.md
+++ b/_posts/2024-08-11-6rs.md
@@ -3,8 +3,8 @@ layout: post
 title: "Estratégias de Modernização de Aplicações: Aplicando os 6Rs com o Cloud Adoption Framework"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Artigos, Inteligência Artificial Generativa]
-tags: [Artigos, Inteligência Artificial Generativa, IA]
+categories: [Artigos, Azure, Cloud Adoption Framework]
+tags: [Artigos, Azure, Cloud Adoption Framework]
 ---
 ## Introdução
 
