--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #09: O Dia a Dia de um DevOps Engineer com Vinicius Deschamps
+[![#09: O Dia a Dia de um DevOps Engineer com Vinicius Deschamps](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/9.png)](https://open.spotify.com/episode/39lxJSoafJxle4ZwMtmD2T?si=cd750d891ca54fac)
+
 #### #08 Como é o Dia a Dia de um DevOps Engineer com Antonio Junior
 [![#08 Como é o Dia a Dia de um DevOps Engineer com Antonio Junior](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/8.png)](https://open.spotify.com/episode/46jYWZ4b0A3SNizHQQmYf7?si=e47dd3e6c93b4355)
 
