--- a/_posts/2024-08-11-6rs.md
+++ b/_posts/2024-08-11-6rs.md
@@ -24,8 +24,8 @@ Rearquitetar consiste em uma reestruturação significativa da arquitetura da ap
 
 **Quando usar Rearquitetar:**
 
-- Alta Escalabilidade e Resiliência: Use quando a aplicação precisa escalar e resistir a variações na demanda.
-- Limitações Estruturais: Quando a arquitetura atual impede a adoção de novas tecnologias ou cenários modernos.
+- **Alta Escalabilidade e Resiliência:** Use quando a aplicação precisa escalar e resistir a variações na demanda.
+- **Limitações Estruturais:** Quando a arquitetura atual impede a adoção de novas tecnologias ou cenários modernos.
 
 #### Rebuild (Reconstruir):
 
@@ -38,7 +38,7 @@ Reconstruir é a abordagem ideal quando a aplicação atual não pode ser adapta
 - Inadequação Tecnológica: Use quando a aplicação não acompanha as demandas tecnológicas atuais ou futuras.
 - Aproveitamento Máximo da Nuvem: Quando o objetivo é explorar ao máximo capacidades como IA e machine learning.
 
-#### Replace (Substituir): **
+#### Replace (Substituir):
 
 A abordagem **Replace** consiste em substituir uma aplicação existente por uma solução de **Software as a Service (SaaS)** ou outra solução comercial pronta. Essa estratégia permite à empresa evitar os custos e o tempo envolvidos na modificação ou manutenção de uma aplicação legada, optando por uma solução que já atende de forma mais eficiente às necessidades do negócio. Ao adotar uma solução SaaS, a organização também se beneficia de atualizações contínuas, suporte especializado e a possibilidade de escalabilidade sem a complexidade de gerenciar a infraestrutura subjacente.
 
@@ -71,8 +71,8 @@ O Rehost envolve mover aplicações para a nuvem sem modificar o código ou a ar
 
 **Quando Usar Migrate:**
 
-- **Transição Rápida:** Quando o objetivo principal é mover rapidamente aplicações para a nuvem, evitando complexidade e tempo de reestruturação.
-- **Manutenção de Funcionalidade:** Quando a aplicação já atende às necessidades de negócios e só precisa ser transferida para o ambiente de nuvem sem alterações.
+- **Migração Urgente:** Move aplicações para a nuvem rapidamente, com mínima complexidade.
+- **Preservação de Funcionalidade:** Mantém as aplicações inalteradas enquanto as transfere para a nuvem.
 
 #### Visão Geral da Migração no Azure
 
