--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #10 Minha primeira palestra internacional com Erivaldo Lopes
+[![#10 Minha primeira palestra internacional com Erivaldo Lopes](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/10.png)](https://open.spotify.com/episode/0c2vqxjjK4QwC8cUiFELFW?si=b555e061b7b84b7d)
+
 #### #09: O Dia a Dia de um DevOps Engineer com Vinicius Deschamps
 [![#09: O Dia a Dia de um DevOps Engineer com Vinicius Deschamps](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/9.png)](https://open.spotify.com/episode/39lxJSoafJxle4ZwMtmD2T?si=cd750d891ca54fac)
 
