--- a/_posts/2024-06-10-curso-az-900.md
+++ b/_posts/2024-06-10-curso-az-900.md
@@ -24,7 +24,7 @@ Agradecemos a todos os participantes por tornarem este evento memorável. Estamo
 - <i class="fa-regular fa-folder-open"></i> **Slides da Apresentação:** Utilizado Material Oficial da Microsoft fornecido para MCT's.
 
 Até o próximo evento!
-Spoilers: Será o #AI900 #Fundamentos de IA do Azure
+Spoilers: Será o DP900 #Fundamentos de Dados do Azure
 
 Instrutores:
 
