--- a/_posts/2024-07-25-IA-Gen.md
+++ b/_posts/2024-07-25-IA-Gen.md
@@ -18,13 +18,13 @@ IA generativa refere-se a sistemas de inteligência artificial capazes de criar 
 
 ## Aplicações e Impacto Econômico
 
-As aplicações de IA generativa são vastas e variadas. Empresas como Google e Microsoft já integraram essa tecnologia em seus produtos, como o Bard e o Bing Chat, respectivamente. Essas ferramentas permitem que os usuários gerem textos e imagens a partir de comandos simples, chamados de prompts. Além disso, a IA generativa está revolucionando o desenvolvimento de software, tornando a criação de aplicações de IA mais acessível e menos custosa.
+As aplicações de IA generativa são vastas e variadas. Empresas como Google e Microsoft possuem seus produtos, como o Gemini e o Copilot, respectivamente. Essas ferramentas permitem que os usuários gerem textos e imagens a partir de comandos simples, chamados de prompts. Além disso, a IA generativa está revolucionando o desenvolvimento de software, tornando a criação de aplicações de IA mais velozes e menos custosa.
 
-Estudos indicam que a IA generativa pode adicionar entre 2,6 a 4,4 trilhões de dólares à economia global anualmente. A Goldman Sachs estima que essa tecnologia pode aumentar o Produto Interno Bruto (PIB) global em 7% na próxima década. Contudo, também há preocupações sobre o impacto na força de trabalho, com estimativas de que cerca de 10% das tarefas realizadas por mais de 80% dos trabalhadores nos Estados Unidos poderiam ser afetadas pela IA generativa.
+Estudos indicam que a IA generativa pode adicionar entre 2,6 a 4,4 trilhões de dólares à economia global anualmente. [A Goldman Sachs estima que essa tecnologia pode aumentar o Produto Interno Bruto (PIB) global em 7% na próxima década](https://blog.mackenzie.br/vestibular/3-carreiras-para-trabalhar-com-inteligencia-artificial-ia/). Contudo, também há preocupações sobre o impacto na força de trabalho, [com estimativas de que cerca de 10% das tarefas realizadas por mais de 80% dos trabalhadores nos Estados Unidos poderiam ser afetadas pela IA generativa](https://pt.euronews.com/next/2023/03/24/estes-sao-os-postos-de-trabalho-que-poderao-ser-mais-afetados-pela-inteligencia-artificial).
 
 ## Como a IA Generativa Funciona?
 
-O funcionamento da IA generativa é baseado em aprendizado supervisionado, onde modelos são treinados para prever a próxima palavra ou imagem em uma sequência com base em dados anteriores. Este processo envolve grandes volumes de dados textuais e imagéticos que ajudam os modelos a aprender padrões e gerar conteúdo coerente e relevante.
+O funcionamento da IA generativa é baseado em aprendizado supervisionado, onde modelos são treinados para prever a próxima palavra ou imagem em uma sequência com base em dados anteriores. Este processo envolve grandes volumes de dados textuais e de imagens que ajudam os modelos a aprender padrões e gerar conteúdo coerente e relevante.
 
 Por exemplo, ao solicitar a criação de uma imagem de "uma maçã vermelha", o modelo usa técnicas de aprendizado profundo para gerar uma imagem que corresponde à descrição fornecida. Este processo pode ser refinado através de ajustes nos prompts e parâmetros do modelo, permitindo a geração de conteúdos altamente específicos e detalhados.
 
@@ -40,11 +40,11 @@ A construção de aplicações de software com IA generativa tem se tornado mais
 
 Hoje, com o desenvolvimento baseado em prompts, a criação de um classificador de sentimentos pode ser reduzida a apenas algumas linhas de código. Um exemplo clássico é o uso de prompts para classificar uma avaliação de restaurante como positiva ou negativa. Anteriormente, esse processo envolvia rotular centenas ou milhares de exemplos para treinar um modelo. Agora, com uma simples chamada a um grande modelo de linguagem (LLM), é possível obter uma classificação de sentimento com precisão e eficiência.
 
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/IA-Gen/4.png)
+
 ## Impacto na Produtividade e Desenvolvimento
 
-A redução da barreira para a construção de aplicações com IA generativa está permitindo uma proliferação de novos aplicativos. Tarefas que antes levavam de 6 a 12 meses para serem desenvolvidas agora podem ser concluídas em dias ou semanas. Isso é especialmente benéfico para empresas que precisam de soluções rápidas e eficazes para problemas complexos, como o monitoramento de reputação ou a automatização de serviços de atendimento ao cliente.
-
-Um exemplo prático é a criação de um chatbot para atendimento de pedidos em restaurantes. Anteriormente, seria necessário desenvolver um sistema completo para interpretar e processar os pedidos dos clientes. Com a IA generativa, é possível construir um protótipo básico rapidamente e, em seguida, aprimorá-lo iterativamente com base em avaliações internas e feedback de usuários.
+A redução da barreira para a construção de aplicações com IA generativa está permitindo uma alta demanda de novos aplicativos. Tarefas que antes levavam de 6 a 12 meses para serem desenvolvidas agora podem ser concluídas em dias ou semanas. Isso é especialmente benéfico para empresas que precisam de soluções rápidas e eficazes para problemas complexos.
 
 ## Desafios e Soluções
 
@@ -69,11 +69,11 @@ Com o avanço da IA generativa, muitas profissões têm integrado essa tecnologi
 
 ## Análise de Tarefas de Trabalhos
 
-Uma abordagem eficaz para implementar a IA generativa é identificar tarefas específicas dentro de funções de trabalho que podem ser automatizadas ou aprimoradas. Em vez de substituir empregos inteiros, a IA geralmente se concentra em automatizar tarefas específicas, como responder a consultas de clientes via chat ou manter registros de interações. A viabilidade técnica e o valor comercial dessas tarefas são critérios fundamentais para avaliar o potencial da IA generativa. Por exemplo, a automatização de respostas de chat pode ser viável e valiosa, enquanto a realização de conversas telefônicas complexas ainda pode ser desafiadora.
+Uma abordagem eficaz para implementar a IA generativa é identificar tarefas específicas dentro de funções de trabalho que podem ser automatizadas ou aprimoradas. Em vez de substituir empregos inteiros, a IA geralmente se concentra em automatizar tarefas. A viabilidade técnica e o valor comercial dessas tarefas são critérios fundamentais para avaliar o potencial da IA generativa. Por exemplo, a automatização de respostas de chat pode ser viável e valiosa, enquanto a realização de conversas telefônicas complexas ainda pode ser desafiadora.
 
 ## Exemplos de Análise de Tarefas em Diferentes Funções
 
-Ao analisar diferentes funções de trabalho, pode-se descobrir que as melhores oportunidades para a IA generativa não são necessariamente as mais óbvias. Programadores, por exemplo, fazem mais do que apenas escrever código; eles também documentam, respondem a consultas de suporte e revisam códigos. Advogados passam muito tempo redigindo e revisando documentos legais, e jardineiros cuidam de plantas e mantêm equipamentos. Cada uma dessas tarefas tem diferentes graus de potencial para automação ou aprimoramento com IA, e uma análise sistemática pode ajudar a identificar onde a IA pode ser mais útil.
+Ao analisar diferentes funções de trabalho, pode-se descobrir que as melhores oportunidades para a IA generativa não são necessariamente as mais óbvias. Programadores, por exemplo, fazem mais do que apenas escrever código; eles também documentam e revisam códigos. Cada tarefa tem diferente grau de potencial para automação ou aprimoramento com IA, e uma análise sistemática pode ajudar a identificar onde a IA pode ser mais útil.
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/artigos/IA-Gen/2.webp)
 
 ## Novos Fluxos de Trabalho e Oportunidades de Crescimento
