11 Episódio com Marcus Vinícius Carvalho

--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #11 Episódio com Marcus Vinícius Carvalho
+[![#11 Episódio com Marcus Vinícius Carvalho](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/11.png)](https://open.spotify.com/episode/42ZiNLQDHs6PNpSLKMZ88r?si=07b20188722e4bc5)
+
 #### #10 Minha primeira palestra internacional com Erivaldo Lopes
 [![#10 Minha primeira palestra internacional com Erivaldo Lopes](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/10.png)](https://open.spotify.com/episode/0c2vqxjjK4QwC8cUiFELFW?si=b555e061b7b84b7d)
 
