--- a/_posts/2024-09-11-codecon.md
+++ b/_posts/2024-09-11-codecon.md
@@ -53,6 +53,8 @@ A Codecon Summit vai além do aprendizado técnico — é também sobre construi
 
 Se você está em busca de uma oportunidade para se atualizar sobre as últimas tendências no desenvolvimento de software e conhecer pessoas incríveis da área, não pode perder a próxima edição da Codecon. E se você também esteve presente nesta edição, que tal continuarmos essa conversa? O que achou do evento?
 
+- <i class="fa-brands fa-linkedin"></i> [**Post Linkedin**](hhttps://www.linkedin.com/posts/rafaelmaferreira_codecon-desenvolvimento-microservices-activity-7238878836468133888-Ypt6?utm_source=share&utm_medium=member_desktop)
+
 ---
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Logo2.png)
