#12 Episódio com Thiago Finardi

--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -14,7 +14,7 @@ Nesta seção do blog, compartilho minha jornada nas plataformas YouTube pelos c
 [![LowOps Channel](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Youtube-Banner.png)](https://www.youtube.com/@LowOps-Channel)
 
 ## #12 Episódio com Thiago Finardi
-[![#12 Episódio com Thiago Finardi](https://img.youtube.com/vi/SxIA-K5oup8/0.jpg)](https://www.youtube.com/watch?v=SxIA-K5oup8)
+[![#12 Episódio com Thiago Finardi](https://img.youtube.com/vi/hjhgpji-xCY/0.jpg)](https://www.youtube.com/watch?v=hjhgpji-xCY)
 
 ## #11 Episódio com Marcus Vinícius Carvalho
 [![#11 Episódio com Marcus Vinícius Carvalho](https://img.youtube.com/vi/uOwwddYlNNs/0.jpg)](https://www.youtube.com/watch?v=uOwwddYlNNs)
