12 Episódio com Thiago Finardi

--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### ##12 Episódio com Thiago Finardi
+[![##12 Episódio com Thiago Finardi](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/12.png)](https://open.spotify.com/episode/11wF8fo1eMvAkOExVPZebb?si=438dc9a23b814002)
+
 #### #11 Episódio com Marcus Vinícius Carvalho
 [![#11 Episódio com Marcus Vinícius Carvalho](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/11.png)](https://open.spotify.com/episode/42ZiNLQDHs6PNpSLKMZ88r?si=07b20188722e4bc5)
 
