--- a/_posts/2024-10-08-tls.md
+++ b/_posts/2024-10-08-tls.md
@@ -103,9 +103,9 @@ Antes de migrar para TLS 1.2 ou superior, é importante considerar os seguintes 
 
 - **Configurações Personalizadas de TLS**: Verifique se há configurações personalizadas de TLS nos seus recursos que possam precisar de ajustes.
 
-## Como Automatizar a Verificação de TLS no Azure
+## Como Verificar o ambiente no Azure em massa
 
-Se você gerencia vários recursos no Azure, pode ser demorado verificar a versão de TLS manualmente em cada um deles. No entanto, utilizando ferramentas como o **Azure Resource Graph** e o **Log Analytics**, você pode executar consultas que automatizam esse processo.
+Se você gerencia vários recursos no Azure, pode ser demorado verificar a versão de TLS manualmente em cada um deles. No entanto, utilizando ferramentas como o **Azure Resource Graph** e o **Log Analytics**, você pode executar consultas que facilitam esse processo.
 
 ### O que é o Azure Resource Graph?
 
@@ -119,7 +119,7 @@ Com o Azure Resource Graph, você pode fazer consultas que identificam rapidamen
 
 Esta consulta identifica diferentes tipos de recursos e verifica se eles estão utilizando versões antigas de TLS:
 
-```kql
+```bash
 resources
 | where type in (
     "microsoft.keyvault/vaults",
@@ -149,7 +149,7 @@ resources
 
 #### Verificação em Contas de Armazenamento
 
-```kql
+```bash
 resources
 | where type == "microsoft.storage/storageaccounts"
 | extend minTlsVersion = properties.minimumTlsVersion
@@ -159,7 +159,7 @@ resources
 
 #### Verificação em Web Apps
 
-```kql
+```bash
 resources
 | where type == "microsoft.web/sites"
 | extend minTlsVersion = properties.siteConfig.minTlsVersion
@@ -169,7 +169,7 @@ resources
 
 #### Verificação em Azure Cosmos DB
 
-```kql
+```bash
 resources
 | where type == "microsoft.documentdb/databaseAccounts"
 | extend minTlsVersion = properties.minimalTlsVersion
@@ -187,13 +187,11 @@ Além do Azure Resource Graph, o Azure Monitor pode ser utilizado para monitorar
 Para garantir que seus recursos estejam usando TLS 1.2 ou superior, você pode utilizar as consultas de logs e métricas disponíveis no Azure Monitor e no Log Analytics. O monitoramento da versão do TLS em uso é crucial, especialmente considerando a proximidade da descontinuação de versões mais antigas como o TLS 1.0 e 1.1.
 [Referência](https://learn.microsoft.com/en-us/azure/key-vault/general/monitor-key-vault#sample-kusto-queries)
 
-### Consultas de Kusto para Monitoramento de TLS no Key Vault
-
-#### Identificar Clientes Usando TLS Inferior a 1.2
+### Identificar Clientes Usando TLS Inferior a 1.2
 
 Essa consulta mostra requisições ao Key Vault feitas com uma versão de TLS inferior a 1.2 nos últimos 90 dias:
 
-```kql
+```bash
 AzureDiagnostics
 | where TimeGenerated > ago(90d)
 | where ResourceProvider == "MICROSOFT.KEYVAULT"
