--- a/_posts/2024-10-08-tls.md
+++ b/_posts/2024-10-08-tls.md
@@ -160,11 +160,10 @@ resources
 #### Verificação em Web Apps
 
 ```bash
-resources
-| where type == "microsoft.web/sites"
-| extend minTlsVersion = properties.siteConfig.minTlsVersion
-| where isnotempty(minTlsVersion) and minTlsVersion !contains "1.2"
-| project name, resourceGroup, subscriptionId, minTlsVersion
+AppServiceResources
+| where type =~ 'microsoft.web/sites/config'
+| project id, name, minTlsVersion = properties.MinTlsVersion
+| where isnotempty(minTlsVersion)
 ```
 
 #### Verificação em Azure Cosmos DB
