--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -13,6 +13,9 @@ Nesta seção do blog, compartilho minha jornada nas plataformas YouTube pelos c
 
 [![LowOps Channel](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Youtube-Banner.png)](https://www.youtube.com/@LowOps-Channel)
 
+## #14 Episódio com Peter König
+[![#14 Episódio com Peter König](https://img.youtube.com/vi/_L4AG_rz1m8/0.jpg)](https://www.youtube.com/watch?v=_L4AG_rz1m8)
+
 ## #13 Episódio com Amim Knabben: Explorando Kubernetes for Fun e Profit
 [![#13 Episódio com Amim Knabben: Explorando Kubernetes for Fun e Profit](https://img.youtube.com/vi/QyoOu_qJ6tk/0.jpg)](https://www.youtube.com/watch?v=QyoOu_qJ6tk)
 
