--- a/_posts/2024-06-23-Podcast.md
+++ b/_posts/2024-06-23-Podcast.md
@@ -3,8 +3,8 @@ layout: post
 title: "Episódio Especial do Podcast LowOpsCast no TDC"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, TDC, LowOpsCast]
-tags: [Registro Eventos Presenciais, TDC, LowOpsCast]
+categories: [Registro Eventos Presenciais, Participante, TDC, LowOpsCast]
+tags: [Registro Eventos Presenciais, Participante, TDC, LowOpsCast]
 ---
 
 ## Introdução
