--- a/_posts/2024-09-11-codecon.md
+++ b/_posts/2024-09-11-codecon.md
@@ -3,8 +3,8 @@ layout: post
 title: "Minha Experiência na Codecon Summit: Um Evento Para Devs e Por Devs"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, Codecon Summit 2024]
-tags: [Registro Eventos Presenciais, Codecon Summit 2024]
+categories: [Registro Eventos Presenciais, Participante, Codecon Summit 2024]
+tags: [Registro Eventos Presenciais, Participante, Codecon Summit 2024]
 ---
 
 No último dia 07/09/2024, tive a oportunidade de participar da [Codecon Summit](https://codecon.dev/summit/programacao), um dos maiores eventos de tecnologia voltados para desenvolvedores. Se você já esteve em um evento organizado por devs e para devs, sabe que a experiência é sempre enriquecedora, com uma abundância de conteúdo técnico de alto nível.
