--- a/_posts/2024-06-25-talk-tdc.md
+++ b/_posts/2024-06-25-talk-tdc.md
@@ -3,8 +3,8 @@ layout: post
 title: "Experiência de Palestrar no TDC na Trilha Arquitetura de Dados"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Registro Eventos Presenciais, TDC, Talk]
-tags: [Registro Eventos Presenciais, TDC, Talk]
+categories: [Registro Eventos Presenciais, Palestrante, TDC Trilha Arquitetura de Dados]
+tags: [Registro Eventos Presenciais, Palestrante, TDC Trilha Arquitetura de Dados]
 ---
 
 #### Introdução
