--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -13,6 +13,8 @@ Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências
 
 ### 2024
 
+- <i class="fa-solid fa-link"></i> [Outubro - Tftec ao vivo 2024(https://www.tftec.com.br/tftecaovivo-2024/)
+- <i class="fa-solid fa-link"></i> [Outubro - #27 Cloud Native São Paulo - Sustainability Day na AWS(https://community.cncf.io/events/details/cncf-cloud-native-sao-paulo-presents-27-cloud-native-sao-paulo-sustainability-day-na-aws/)
 - <i class="fa-solid fa-link"></i> [Setembro - Codecon Summit 2024](https://codecon.dev/summit/programacao)
 - <i class="fa-solid fa-link"></i> [Junho - TDC - Trilha DevOps e SRE](https://thedevconf.com/tdc/2024/florianopolis/trilha-devops-e-sre)
 - <i class="fa-solid fa-link"></i> [Junho - TDC - Trilha Cloud](https://thedevconf.com/tdc/2024/florianopolis/trilha-cloud)
