--- a/_posts/2024-06-25-talk-tdc.md
+++ b/_posts/2024-06-25-talk-tdc.md
@@ -40,12 +40,12 @@ Os principais pontos abordados foram:
 - <i class="fa-regular fa-folder-open"></i> **Slides da Apresentação:** [Plataformização de Arquitetura de Dados com Backstage.io e IAC](https://stoblobcertificados011.blob.core.windows.net/palestras/TDC.pdf)
 
 #### Momentos Destacados
-Durante a palestra, demonstramos casos práticos de como essas ferramentas podem simplificar e otimizar o fluxo de trabalho em projetos de dados. Compartilhamos insights sobre a integração de Backstage.io com Terraform para criar uma infraestrutura robusta e escalável, que pode ser gerida de forma eficiente.
+Durante a palestra, demonstramos casos práticos de como essas ferramentas podem simplificar e otimizar o fluxo de trabalho em projetos de dados. Compartilhamos insights sobre a integração de Backstage.io com Terraform para criar uma infraestrutura robusta e escalável, que pode ser gerida de forma eficiente.  E para quem se perguntou da qualidade das fotos, sim, é isso, tivemos um fotógrafo profissional ([Erivaldo Lopes](https://www.linkedin.com/in/erivaldolopes/))!
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tdc/05.JPG)
 
 #### Reflexões e Aprendizados
-Palestrar no TDC Floripa foi uma experiência enriquecedora. Além de compartilhar conhecimento, tive a oportunidade de aprender com outros profissionais e expandir minha rede de contatos. A interação com o público foi dinâmica, com perguntas que geraram discussões profundas sobre os desafios e oportunidades na arquitetura de dados.
+Palestrar no TDC Floripa foi uma experiência enriquecedora. Além de compartilhar conhecimento, tive a oportunidade de aprender com outros profissionais e expandir minha rede de contatos. A interação com o público foi dinâmica, com perguntas que geraram discussões profundas sobre os desafios e oportunidades na arquitetura de dados. 
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tdc/06.JPG)
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tdc/07.JPG)
